# social-network-higload

./: .env  .pre-commit.sh  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: check.yml
.sqlx/: query-3e320f021f38b70d25f6787678a69cab5446ae92e65af1e7f75bec6c8de39955.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json
migrations/: 20250309134242_users.sql
src/: app_state.rs  config.rs  db.rs  lib.rs  router.rs
src/api/: auth.rs  health.rs  me.rs  mod.rs  users.rs
src/dto/: error.rs  user.rs
src/errors/: auth.rs  common.rs  user.rs
src/helpers/: mod.rs  with_rejection.rs
src/middlewares/: user_auth.rs
src/services/: encryption.rs  jwt.rs  mod.rs  users.rs
