[package]
name = "soc-net"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-client-ip = "0.7.0"
axum-extra = { version = "0.10.0", features = ["typed-header"] }
axum-valid = { version = "0.23.0", features = ["into_json", "422"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["env", "derive"] }
futures = { version = "0.3.31", default-features = false, features = ["async-await"] }
jsonwebtoken = "9.3.1"
log = "0.4.26"
miette = { version = "7.5.0", features = ["fancy"] }
password-auth = "1.0.0"
rayon = "1.10.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio-native-tls", "postgres", "uuid", "time"] }
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["full"] }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors", "full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras", "macros"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = "1.15.1"
validator = { version = "0.20.0", features = ["derive"] }

[dev-dependencies]
axum-test = { version = "17.2.0", features = ["pretty-assertions"] }
pretty_assertions = "1.4.1"
test-context = "0.4.1"
